2011-006-06Riccardo Mottola <rm@gnu.org>

	* Resources/Sudoku.tiff
	Adjusted resolution.

	Imported.
	Icons renamed to Resources